<resources>
    <string name="app_name">ARouterDemo</string>
    <string name="bt_target">回主页面</string>
    <string name="bt_with_arguments">带参数跳转</string>
    <string name="bt_with_animation">带动画跳转</string>
    <string name="bt_with_interceptor">带拦截器跳转</string>
    <string name="bt_with_result">处理跳转结果</string>
    <string name="bt_with_inject">实现IOC，依赖注入</string>
    <string name="bt_with_fragment">跳转到Fragment</string>
    <string name="bt_with_request_code">带请求码跳转</string>
</resources>
